--- a/veda.properties
+++ b/veda.properties
@@ -26,7 +26,8 @@ ro_storage_url 	     = tcp://127.0.0.1:24000
 # TARANTOOL master config
 binobj_format = msgpack
 tarantool_url = 127.0.0.1:3309
-modules=veda-ro-storage,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ontologist,veda-ccus,veda-geo-indexer,veda-webserver,veda-gowebserver,veda-ttlreader
+modules=veda-ro-storage,veda-ft-indexer,veda-ft-query,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ltr-scripts,veda-scripts-lp,veda-scripts-lp1,veda-scripts-main,veda-ontologist,veda-ccus,veda-gowebserver,veda-ttlreader
+#veda-geo-indexer,veda-webserver
 
 redis_addr = 127.0.0.1:6379
 geo_port = 8070
